# 2ndsemexamc

./: .gitignore  BubbleSort.c  CMakeLists.txt  IsArmstrong.c  IsPrime.c  LinearSearch.c  MatAdd.c  MatMultiply.c  PrimeCheck.py  PrimeGen.cpp  PrintPrimes.c  README.md  Runner.py  StringRev.c  delete.c  evenodd.c  factorial.c  insert.c  palindrome.c  pyramid.c  reverseint.c  struct.c  vote.c
